--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -3,15 +3,23 @@
 
 = Introduction =
 
-Software desenvolvido em C++ para a avaliação na disciplina Algortimo e Estruturas de Dados.
+This software was developed in C++ as an assignment for 'Algoritimos e Estrutura de Dados' class.
 
-== Uso do programa ==
-Este programa realiza a contagem das palavras encontradas em um arquivo _.txt_ fornecido pelo o usuário
+== Purpose ==
+This program is used to analyze word occurrence statistics in some given plain text file.
 
-= Details =
- Este programa faz o uso de:
+== ==
+Basically the user selects one text file at a time. For each file, the program seek for each word, normalize it, and store it. If the word was already found, the program increases it counter.
+After reading the entire file, the program then prints on the screen some statistics about the words, such as occurence count and percentage for each word, and then, allows user to select another file.
+
+For each file added, the program just add those new words from that file.
+If the user wants, he can reset the statistics to start all over again.
+
+
+= Resources =
+ This program is based on those technologies:
 
   # C++
-  # CPPUnit
-  # STL
-  # wxWidget
+  # STL (For data structures, such as deque and set)
+  # CPPUnit (For unit test cases)
+  # wxWidget (GUI)
